force-app/main/default/objects/Wage_Claim__c/fields/Amounts_Found_Due__c.field-meta.xml
<CustomField>
    <fullName>Amounts_Found_Due__c</fullName>
    <label>Amounts Found Due</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per ODA</fullName>
            </value>
            <value>
                <fullName>By Assigned Deputy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>