force-app/main/default/objects/Wage_Claim__c/fields/Approval_Denied_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Approval_Denied_Reasons__c</fullName>
    <label>Approval Denied Reasons</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>