force-app/main/default/objects/Wage_Claim__c/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <displayFormat>A{000000}</displayFormat>
    <label>AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>