force-app/main/default/objects/Wage_Claim__c/fields/Bank_Name_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_and_Address__c</fullName>
    <label>Bank Name and Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>