force-app/main/default/objects/Wage_Claim__c/fields/Bankruptcy_Court_District__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Court_District__c</fullName>
    <label>Bankruptcy Court District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>Southern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>