force-app/main/default/objects/Wage_Claim__c/fields/Bond_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bond_Amount__c</fullName>
    <label>Bond Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>