force-app/main/default/objects/Wage_Claim__c/fields/Business_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Business_Expenses__c</fullName>
    <label>Business Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>