force-app/main/default/objects/Wage_Claim__c/fields/Business_Expenses_Amount_Earned_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Business_Expenses_Amount_Earned_Claimed__c</fullName>
    <label>Business Expenses Amount Earned/Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>