force-app/main/default/objects/Wage_Claim__c/fields/Business_Expenses_Claim_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Expenses_Claim_Period_End_Date__c</fullName>
    <label>Business Expenses Claim Period End Date</label>
    <type>Date</type>
</CustomField>