force-app/main/default/objects/Wage_Claim__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <length>40</length>
    <type>Text</type>
</CustomField>