force-app/main/default/objects/Wage_Claim__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <formula>UPPER(Office__r.Office_Code__c &amp; &quot; - &quot; &amp; AutoNumber__c &amp; &quot; &quot; &amp; LEFT( Deputy_Labor_Commissioner__r.FirstName, 1) &amp; LEFT( Deputy_Labor_Commissioner__r.LastName, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>