force-app/main/default/objects/Wage_Claim__c/fields/Case_Number_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Legacy__c</fullName>
    <externalId>true</externalId>
    <label>Case Number (Legacy)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>