force-app/main/default/objects/Wage_Claim__c/fields/Claims_Select_all_that_apply__c.field-meta.xml
<CustomField>
    <fullName>Claims_Select_all_that_apply__c</fullName>
    <label>Claims (Select all that apply)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular Wages (for non-overtime hours)</fullName>
            </value>
            <value>
                <fullName>Overtime Wages (including double time)</fullName>
            </value>
            <value>
                <fullName>Meal Period Wages</fullName>
            </value>
            <value>
                <fullName>Rest Period Wages</fullName>
            </value>
            <value>
                <fullName>Split Shift Premium</fullName>
            </value>
            <value>
                <fullName>Reporting Time Pay</fullName>
            </value>
            <value>
                <fullName>Commissions</fullName>
            </value>
            <value>
                <fullName>Vacation Wages</fullName>
            </value>
            <value>
                <fullName>Business Expenses</fullName>
            </value>
            <value>
                <fullName>Unlawful Deductions</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>