force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Auto_Tort__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Auto_Tort__c</fullName>
    <label>CM-010 Auto Tort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Uninsured motorist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>