force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Contract__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Contract__c</fullName>
    <label>CM-010 Contract</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Breach of contract/warranty</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Rule 3.740 collections</fullName>
            </value>
            <value>
                <fullName>Insurance coverage</fullName>
            </value>
            <value>
                <fullName>Other contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>