force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Employment__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Employment__c</fullName>
    <label>CM-010 Employment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wrongful termination</fullName>
            </value>
            <value>
                <fullName>Other Employment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>