force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Judicial_Review__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Judicial_Review__c</fullName>
    <label>CM-010 Judicial Review</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset forfeiture</fullName>
            </value>
            <value>
                <fullName>Petition re: arbitration award</fullName>
            </value>
            <value>
                <fullName>Writ of mandate</fullName>
            </value>
            <value>
                <fullName>Other judicial review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>