force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Limited_Unlimited__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Limited_Unlimited__c</fullName>
    <label>Limited/Unlimited</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>