force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Non_PI_PD_WD_Tort__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Non_PI_PD_WD_Tort__c</fullName>
    <label>CM-010 Non-PI/PD/WD Tort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business tort/unfair business practice</fullName>
            </value>
            <value>
                <fullName>Civil rights</fullName>
            </value>
            <value>
                <fullName>Defamation</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Intellectual property</fullName>
            </value>
            <value>
                <fullName>Professional negligence</fullName>
            </value>
            <value>
                <fullName>Other non-PI/PD/WD tort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>