force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Other_PI_PD_WD_Tort__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Other_PI_PD_WD_Tort__c</fullName>
    <label>CM-010 Other PI/PD/WD Tort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Product liability</fullName>
            </value>
            <value>
                <fullName>Medical malpractice</fullName>
            </value>
            <value>
                <fullName>Other PI/PD/WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>