force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Partial_Amount__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Partial_Amount__c</fullName>
    <label>Partial Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>