force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Provisionally_Complex_Litigation__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Provisionally_Complex_Litigation__c</fullName>
    <label>CM-010 Provisionally Complex Litigation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antitrust/Trade regulation</fullName>
            </value>
            <value>
                <fullName>Construction defect</fullName>
            </value>
            <value>
                <fullName>Mass tort</fullName>
            </value>
            <value>
                <fullName>Securities litigation</fullName>
            </value>
            <value>
                <fullName>Environmental/Toxic Tort</fullName>
            </value>
            <value>
                <fullName>Insurance coverage claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>