force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Real_Property__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Real_Property__c</fullName>
    <label>CM-010 Real Property</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eminent domain/inverse condemnation</fullName>
            </value>
            <value>
                <fullName>Wrongful eviction</fullName>
            </value>
            <value>
                <fullName>Other real property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>