force-app/main/default/objects/Wage_Claim__c/fields/CM_010_Satisfaction_Date__c.field-meta.xml
<CustomField>
    <fullName>CM_010_Satisfaction_Date__c</fullName>
    <label>Satisfaction Date</label>
    <type>Date</type>
</CustomField>