force-app/main/default/objects/Wage_Claim__c/fields/Commissions_Claim_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Claim_Period_Start_Date__c</fullName>
    <label>Commissions Claim Period Start Date</label>
    <type>Date</type>
</CustomField>