force-app/main/default/objects/Wage_Claim__c/fields/Conference_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Conference_Scheduled_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference Scheduled For</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Deputy_Labor_Commissioner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Hearing_Officer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Senior_Deputy_Labor_Commissioner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Wage_Claims4</relationshipName>
    <type>Lookup</type>
</CustomField>