force-app/main/default/objects/Wage_Claim__c/fields/CONTINUED_TO__c.field-meta.xml
<CustomField>
    <fullName>CONTINUED_TO__c</fullName>
    <description>Listed in FMP as: CONTINUED TO</description>
    <label>CONTINUED TO</label>
    <type>Date</type>
</CustomField>