force-app/main/default/objects/Wage_Claim__c/fields/County_Clerk_Office__c.field-meta.xml
<CustomField>
    <fullName>County_Clerk_Office__c</fullName>
    <label>County Clerk Office</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>