force-app/main/default/objects/Wage_Claim__c/fields/Current_Stage_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Deadline__c</fullName>
    <label>Current Stage Deadline</label>
    <type>Date</type>
</CustomField>