force-app/main/default/objects/Wage_Claim__c/fields/Date_Due_for_LC_2802__c.field-meta.xml
<CustomField>
    <fullName>Date_Due_for_LC_2802__c</fullName>
    <label>Date Due for LC 2802</label>
    <type>Date</type>
</CustomField>