force-app/main/default/objects/Wage_Claim__c/fields/Date_Due_for_LC_98_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Due_for_LC_98_1__c</fullName>
    <label>Date Due for LC 98.1</label>
    <type>Date</type>
</CustomField>