force-app/main/default/objects/Wage_Claim__c/fields/Date_of_Closing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Closing__c</fullName>
    <label>Date of Closing</label>
    <type>Date</type>
</CustomField>