force-app/main/default/objects/Wage_Claim__c/fields/DATED__c.field-meta.xml
<CustomField>
    <fullName>DATED__c</fullName>
    <description>Listed in FMP as: DATED</description>
    <label>DATED</label>
    <type>Date</type>
</CustomField>