force-app/main/default/objects/Wage_Claim__c/fields/DateTime_Clarification_Requested__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Clarification_Requested__c</fullName>
    <label>DateTime Clarification Requested</label>
    <type>DateTime</type>
</CustomField>