force-app/main/default/objects/Wage_Claim__c/fields/DateTime_Entity_Information_Requested_2__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Entity_Information_Requested_2__c</fullName>
    <label>DateTime Entity Information Requested 2</label>
    <type>DateTime</type>
</CustomField>