force-app/main/default/objects/Wage_Claim__c/fields/DateTime_Entity_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Entity_Information_Requested__c</fullName>
    <label>DateTime Entity Information Requested</label>
    <type>DateTime</type>
</CustomField>