force-app/main/default/objects/Wage_Claim__c/fields/DateTime_Opinion_from_Legal_Requested__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Opinion_from_Legal_Requested__c</fullName>
    <label>ZDateTime Opinion from Legal Requested</label>
    <type>DateTime</type>
</CustomField>