force-app/main/default/objects/Wage_Claim__c/fields/DateTime_Scheduled_for_Conference__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Scheduled_for_Conference__c</fullName>
    <label>Date Conference Held</label>
    <type>DateTime</type>
</CustomField>