force-app/main/default/objects/Wage_Claim__c/fields/DateTime_WCA_2_Sent__c.field-meta.xml
<CustomField>
    <fullName>DateTime_WCA_2_Sent__c</fullName>
    <label>DateTime WCA 2 Sent</label>
    <type>DateTime</type>
</CustomField>