force-app/main/default/objects/Wage_Claim__c/fields/Deductions_Recovered_Collected__c.field-meta.xml
<CustomField>
    <fullName>Deductions_Recovered_Collected__c</fullName>
    <label>Deductions Recovered Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>